<resources>
    <string name="app_name">1806957</string>
    <string name="town">Town</string>
    <string name="textview">TextView</string>
    <string name="search">search</string>
    <string name="distance_in_km">Distance in KM</string>
    <string name="distance_km">Distance (km):</string>
    <string name="location">Location:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="clear">clear</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
</resources>